frontend/test/should_fail/computations_decl_use_returns_type_mismatch_004.grg
using model_init;

procedure proc(b:Node) : (B)
{
	return(b);
}

